--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-image-slider-banner": "^1.0.3",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.0.0",
+    "react-native-text-input-mask": "^3.2.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
