--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,3 +4,8 @@ extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autoli
 rootProject.name = 'RN_Project'
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
+
+// include ':react-native-camera'
+// project(':react-native-camera').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-camera/android')
+//project(':react-native-camera').buildVariants = ['general'] // Or 'mlkit' if you want ML Kit features
+
