--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-biometrics": "^3.0.1",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-image-slider-banner": "^1.0.3",
@@ -35,9 +36,9 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "15.0.0",
-    "@react-native-community/cli-platform-android": "15.0.0",
-    "@react-native-community/cli-platform-ios": "15.0.0",
+    "@react-native-community/cli": "^15.1.2",
+    "@react-native-community/cli-platform-android": "^15.1.2",
+    "@react-native-community/cli-platform-ios": "^15.1.2",
     "@react-native/babel-preset": "0.76.1",
     "@react-native/eslint-config": "0.76.1",
     "@react-native/metro-config": "0.76.1",
@@ -45,11 +46,11 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
+    "eslint": "^9.14.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "prettier": "^3.3.3",
     "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4"
+    "typescript": "^5.6.3"
   },
   "engines": {
     "node": ">=18"
