--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.0.0",
+    "react-native-sms-retriever": "^1.1.1",
     "react-native-text-input-mask": "^3.2.0",
     "react-native-vector-icons": "^10.2.0"
   },
