--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
     "axios": "^1.7.7",
+    "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
     "react-native": "0.76.1",
     "react-native-biometrics": "^3.0.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-image-crop-picker": "^0.41.5",
     "react-native-image-slider-banner": "^1.0.3",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
