--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.3.1",
     "react-native": "0.76.1",
     "react-native-biometrics": "^3.0.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.20.2",
@@ -34,6 +35,7 @@
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.0.0",
     "react-native-sms-retriever": "^1.1.1",
+    "react-native-svg": "^15.9.0",
     "react-native-text-input-mask": "^3.2.0",
     "react-native-vector-icons": "^10.2.0"
   },
